# cqrs-framework

./: .gitignore  .rustfmt.toml  Cargo.toml
.husky/hooks/: commit-msg  pre-commit
src/: aggregate.rs  command.rs  command_bus.rs  command_handler.rs  event.rs  event_bus.rs  event_bus_rabbit.rs  event_handler.rs  event_metadata.rs  event_store.rs  event_store_postgres.rs  lib.rs  projections.rs  query.rs  query_bus.rs  query_handler.rs  snapshot.rs
