[package]
name = "cqrs-framework"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.41"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"

[dev-dependencies]
cargo-run-bin = { version = "1.7.5", default-features = false }
husky-rs = "0.1.5"

[package.metadata.bin]
commitlint-rs = { version = "0.2.3", bins = ["commitlint"] }