[package]
name = "cqrs-framework"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
log = "0.4.28"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
lapin = "3.4.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11.8"

[dev-dependencies]
cargo-run-bin = { version = "1.7.5", default-features = false }
husky-rs = "0.1.5"

[package.metadata.bin]
commitlint-rs = { version = "0.2.3", bins = ["commitlint"] }